0.3.9   (future)

    o   new R function "cxxsignature" that can be used to specify C++ signature
        in calls to cxxfunction

0.3.8   2010-12-07

    o   faster cfunction and cxxfunction by loading and resolving the routine
        at "compile" time

0.3.7   2010-11-02

    o   fix package.skeleton for use with just a single function

0.3.6   2010-07-29

    o   compileCode now grabs the error message generated by the compiler and 
        uses it in in the error message

0.3.5   2010-06-02

    o   new R function "cxxfunction" to generate an R function with inlined
        C++ code using the .Call calling convention. The function was introduced
        to accomodate the needs of the Rcpp family of packages. 
        
    o   new R functions "getPlugin" and "registerPlugin" to manage the 
        plugin system of cxxfunction. 
        
    o   The function package.skeleton (from utils) is made generic and a
        method is available to generate a package skeleton from a function 
        generated by cfunction or cxxfunction 